Day 7 & 8: Changed & updated -  Add and refine Terraform CI/CD pipeline using GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
     defaults:
       run:
         working-directory: terraform-iac/day6-multi-vm
+    env:
+      TF_VAR_ssh_public_key: ${{ secrets.TF_VAR_ssh_public_key }}
 
     steps:
       - name: Checkout
