--- a/day11-azure-container-registry/azure-pipelines.yml
+++ b/day11-azure-container-registry/azure-pipelines.yml
@@ -1,28 +1,38 @@
 trigger:
 - main
-- day11-azure-container-registry
+- day11-azure-container-registry   # Add your working branch to auto-trigger
+
+pr:
+- main
+- day11-azure-container-registry   # Also trigger on PRs to these branches
 
 pool:
   vmImage: ubuntu-latest
 
 variables:
-  imageName: day10-nginx        # Name of the image in ACR
-  tag: latest                   # Tag for the image
-  acrName: tarundevopsacr       # Your ACR name
-  acrLoginServer: tarundevopsacr.azurecr.io  # Full login server
+  imageName: day10-nginx
+  tag: latest
+  acrName: tarundevopsacr
+  acrLoginServer: tarundevopsacr.azurecr.io
 
 steps:
-# Step 1: Checkout the repo
+# Step 1: Checkout repo
 - checkout: self
-  clean: true
+  clean: true   # Ensures no cached files, always fresh
 
 # Step 2: Build and push Docker image to ACR
 - task: Docker@2
   displayName: Build and Push Docker Image to ACR
   inputs:
-    containerRegistry: 'tarundevopsacr-service-connection'  # The service connection you create in Azure DevOps
-    repository: '$(imageName)'                              # Image name inside ACR
+    containerRegistry: 'tarundevopsacr-service-connection'  # Must exist in Azure DevOps
+    repository: '$(imageName)'
     command: 'buildAndPush'
     Dockerfile: '$(Build.SourcesDirectory)/day10-docker-basics/Dockerfile'
     tags: |
       $(tag)
+
+# Optional: verify image in ACR
+- script: |
+    echo "Listing images in ACR"
+    az acr repository list --name $(acrName) --output table
+  displayName: 'Verify ACR Image'
