--- a/day11-azure-container-registry/azure-pipelines.yml
+++ b/day11-azure-container-registry/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
   displayName: Build and Push Docker Image to ACR
   inputs:
     command: 'buildAndPush'
-    repository: '$(imageName)'
+    repository: '$(acrLoginServer)/$(imageName)'      # <- include your ACR login server
     Dockerfile: '$(Build.SourcesDirectory)/day10-docker-basics/Dockerfile'
     tags: |
       $(tag)
