Day 11: new update  ACR + pipeline to build/push Docker image and update YAML

--- a/day11-azure-container-registry/azure-pipelines.yml
+++ b/day11-azure-container-registry/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
   displayName: Build and Push Docker Image to ACR
   inputs:
     command: 'buildAndPush'
-    repository: '$(acrLoginServer)/$(imageName)'      # <- include your ACR login server
+    repository: 'tarundevopsacr.azurecr.io/day10-nginx'      
     Dockerfile: '$(Build.SourcesDirectory)/day10-docker-basics/Dockerfile'
     tags: |
       $(tag)
